Get list of document ids for a given transaction
